components/toast/index.css
/*!
 * Copyright 2025 Adobe. All rights reserved.
 *
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at <http://www.apache.org/licenses/LICENSE-2.0>
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

.spectrum-Toast {
	/* Font */
	--spectrum-toast-font-family: var(--spectrum-sans-font-family-stack);
	--spectrum-toast-font-style: var(--spectrum-default-font-style);
	--spectrum-toast-font-size: var(--spectrum-font-size-100);
	--spectrum-toast-font-weight: var(--spectrum-regular-font-weight);

	/* Size */
	--spectrum-toast-corner-radius: var(--spectrum-corner-radius-800);
	--spectrum-toast-block-size: var(--spectrum-toast-height);
	--spectrum-toast-icon-block-size: var(--spectrum-workflow-icon-size-100);
	--spectrum-toast-max-inline-size: var(--spectrum-toast-maximum-width);

	--spectrum-toast-line-height: var(--spectrum-line-height-100);
	--spectrum-toast-line-height-cjk: var(--spectrum-cjk-line-height-100);

	/* Space */
	--spectrum-toast-spacing-close-button-to-edge: var(--spectrum-spacing-100);
	--spectrum-toast-spacing-text-to-close-button: var(--spectrum-spacing-300);
	--spectrum-toast-spacing-text-to-button-horizontal: var(--spectrum-spacing-400);
	--spectrum-toast-spacing-icon-to-text: var(--spectrum-text-to-visual-300);

	--spectrum-toast-spacing-start-edge-to-text-and-icon: var(--spectrum-spacing-300);
	--spectrum-toast-spacing-button-to-close-button: var(--spectrum-spacing-200);

	--spectrum-toast-spacing-top-edge-to-close-button: var(--spectrum-spacing-200);
	--spectrum-toast-spacing-bottom-edge-to-close-button: var(--spectrum-spacing-200);

	--spectrum-toast-spacing-top-edge-to-icon: var(--spectrum-toast-top-to-workflow-icon);

	--spectrum-toast-spacing-block-start: var(--spectrum-spacing-200);
	--spectrum-toast-spacing-block-end: var(--spectrum-spacing-200);

	--spectrum-toast-spacing-top-edge-to-text: var(--spectrum-toast-top-to-text);
	--spectrum-toast-spacing-bottom-edge-to-text: var(--spectrum-toast-bottom-to-text);

	/* Color */
	--spectrum-toast-background-color-default: var(--spectrum-neutral-subdued-background-color-default);
	--spectrum-toast-negative-background-color-default: var(--spectrum-negative-background-color-default);
	--spectrum-toast-positive-background-color-default: var(--spectrum-positive-background-color-default);
	--spectrum-toast-informative-background-color-default: var(--spectrum-informative-background-color-default);

	--spectrum-toast-text-and-icon-color: var(--spectrum-white);

	--mod-closebutton-icon-color-default: var(--mod-toast-text-and-icon-color, var(--spectrum-toast-text-and-icon-color));
}

.spectrum-Toast {
	box-sizing: border-box;
	display: inline-flex;
	flex-direction: row;
	align-items: stretch;
	min-block-size: var(--mod-toast-block-size, var(--spectrum-toast-block-size));
	max-inline-size: var(--mod-toast-max-inline-size, var(--spectrum-toast-max-inline-size));

	border-radius: var(--mod-toast-corner-radius, var(--spectrum-toast-corner-radius));

	padding-inline-start: var(--mod-toast-spacing-start-edge-to-text-and-icon, var(--spectrum-toast-spacing-start-edge-to-text-and-icon));

	font-family: var(--mod-toast-font-family, var(--spectrum-toast-font-family));
	font-size: var(--mod-toast-font-size, var(--spectrum-toast-font-size));
	font-style: var(--mod-toast-font-style, var(--spectrum-toast-font-style));
	font-weight: var(--mod-toast-font-weight, var(--spectrum-toast-font-weight));

	-webkit-font-smoothing: antialiased;

	background-color: var(--mod-toast-background-color-default, var(--spectrum-toast-background-color-default));
	color: var(--mod-toast-background-color-default, var(--spectrum-toast-background-color-default));
	overflow-wrap: anywhere;
}

.spectrum-Toast--negative {
	background-color: var(--mod-toast-negative-background-color-default, var(--spectrum-toast-negative-background-color-default));
	color: var(--mod-toast-negative-background-color-default, var(--spectrum-toast-negative-background-color-default));

	.spectrum-Toast-closeButton:focus-visible:not(:active) {
		color: var(--mod-toast-negative-background-color-default, var(--spectrum-toast-negative-background-color-default));
	}
}

.spectrum-Toast--info {
	background-color: var(--mod-toast-informative-background-color-default, var(--spectrum-toast-informative-background-color-default));
}

.spectrum-Toast--positive {
	background-color: var(--mod-toast-positive-background-color-default, var(--spectrum-toast-positive-background-color-default));
}

.spectrum-Toast-typeIcon {
	flex-shrink: 0;
	flex-grow: 0;

	block-size: var(--mod-toast-icon-block-size, var(--spectrum-toast-icon-block-size));
	margin-block-start: var(--mod-toast-spacing-top-edge-to-icon, var(--spectrum-toast-spacing-top-edge-to-icon));
	margin-inline-end: var(--mod-toast-spacing-icon-to-text, var(--spectrum-toast-spacing-icon-to-text));
	margin-inline-start: 0;

	color: var(--mod-toast-text-and-icon-color, var(--spectrum-toast-text-and-icon-color));
}

.spectrum-Toast-content {
	flex: 1 1 auto;
	display: inline-block;
	box-sizing: border-box;

	padding-block-start: calc(var(--mod-toast-spacing-top-edge-to-text, var(--spectrum-toast-spacing-top-edge-to-text)) - var(--mod-toast-spacing-block-start, var(--spectrum-toast-spacing-block-start)));
	padding-block-end: calc(var(--mod-toast-spacing-bottom-edge-to-text, var(--spectrum-toast-spacing-bottom-edge-to-text)) - var(--mod-toast-spacing-block-end, var(--spectrum-toast-spacing-block-end)));

	padding-inline-start: 0;

	line-height: var(--mod-toast-line-height, var(--spectrum-toast-line-height));

	text-align: start;

	color: var(--mod-toast-text-and-icon-color, var(--spectrum-toast-text-and-icon-color));

	&:lang(ja),
	&:lang(zh),
	&:lang(ko) {
		line-height: var(--mod-toast-line-height-cjk, var(--spectrum-toast-line-height-cjk));
	}
}

.spectrum-Toast-buttons {
	display: flex;
	flex: 0 0 auto;
	align-items: flex-start;

	margin-block-start: var(--mod-toast-spacing-top-edge-to-close-button, var(--spectrum-toast-spacing-top-edge-to-close-button));
	margin-block-end: var(--mod-toast-spacing-bottom-edge-to-close-button, var(--spectrum-toast-spacing-bottom-edge-to-close-button));
	padding-inline-start: var(--mod-toast-spacing-text-to-close-button, var(--spectrum-toast-spacing-text-to-close-button));
	padding-inline-end: var(--mod-toast-spacing-close-button-to-edge, var(--spectrum-toast-spacing-close-button-to-edge));

	.spectrum-CloseButton {
		align-self: flex-start;
	}
}

.spectrum-Toast .spectrum-Button {
	margin-inline-start: var(--mod-toast-spacing-text-to-button-horizontal, var(--spectrum-toast-spacing-text-to-button-horizontal));
}

.spectrum-Toast:has(.spectrum-Button) {
	.spectrum-Toast-buttons {
		padding-inline-start: var(--mod-toast-spacing-button-to-close-button, var(--spectrum-toast-spacing-button-to-close-button));
	}
}

.spectrum-Toast-body {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	flex: 1 1 auto;
	align-self: center;
	justify-content: flex-end;

	padding-block-start: var(--mod-toast-spacing-block-start, var(--spectrum-toast-spacing-block-start));
	padding-block-end: var(--mod-toast-spacing-block-end, var(--spectrum-toast-spacing-block-end));

	& + .spectrum-Toast-buttons {
		padding-inline-start: var(--mod-toast-spacing-close-button-to-edge, var(--spectrum-toast-spacing-close-button-to-edge));
	}
}

